--- a/assets/sosoares/css/styles-caixilharia.css
+++ b/assets/sosoares/css/styles-caixilharia.css
@@ -465,7 +465,7 @@ max-width: 100%;
 .obras-list {
 width: 250px;
 height: 230px;
-border: 1px solid #c1c1c1;
+/*border: 1px solid #c1c1c1;*/
 float: left;
 margin: 12px;
 position: relative;
@@ -482,6 +482,7 @@ position: absolute;
 width: 100%;
 width: 250px;
 height: 230px;
+border-radius: 10px;
 }
 
 .obras-list p {
