--- a/assets/sosoares/styles.css
+++ b/assets/sosoares/styles.css
@@ -47,15 +47,16 @@ header {
     height: 100px;
     padding: 15px;
 }
-.before {
-    width: 100%;
-    height: 90px;
-}
 
 footer {
     background-color: #f0f0f0;
     width: 100%;
     height: 90px;
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
 }
 
 #bottom {
@@ -88,6 +89,11 @@ footer b {
     float: right;
     display: inline-block;
     margin: 5px;
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
 }
 
 .box {
@@ -98,6 +104,11 @@ footer b {
     margin: 15px;
     text-align: center;
     padding: 30px 15px;
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
 }
 
 
@@ -161,6 +172,11 @@ h3 {
     font-family: Regulare;
     margin: 10px auto;
     width: 100%;
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
 }
 h4 {
     display: inline-block;
@@ -171,82 +187,163 @@ h4 {
 #separador {
     display: none;
 }
+.section {
+    position: absolute;
+    top: 35%!important;
+    right: 0;
+    left: 0;
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
+}
 
+
+@media (max-width: 1200px) {
+    #bd {
+        position: absolute;
+        top: 0;
+        right: 5%;
+    }
+    .center {
+        width: 90%;
+        text-align: center;
+    }
+    footer#bottom .row {
+        width: 100%;
+    }
+    .section {
+        top: 30%!important;
+    }
+}
 
 @media (max-width: 995px) {
     #bd {
-        position: absolute;
         top: -40px;
-        right: -60px;
     }
-
+    .section {
+        top: 20%!important;
+    }
     .center {
         width: 100%;
         padding: 15px 0;
+        margin: 0 auto 200px;
     }
-}
 
-@media (max-width: 768px) {
-    .content, .input, #contacts {
-        width: 100% !important;
-    }
-    nav > .content {
-        display: none;
-    }
-    nav .tablet {
-        display: inline-block;
-    }
-    footer {
-        height: 200px;
-        text-align: center;
-        line-height: 2.5;
-    }
-    /*#bottom {
-        position: relative;
-        bottom: 0px;
-    }*/
-    .before {
-        height: 250px;
-    }
-    #bd {
-        position: absolute;
-        top: -40px;
-        right: 10px;
-    }
-    .center {
-        margin: -250px auto 50px;
+    .box {
+        width: 147px;
+        height: 150px;
     }
     h3 {
         font-size: 14px;
-    }
-    #separador {
-        display: block;
-        background-color: transparent;
-        border: 0;
-    }
-}
-
-@media (max-width: 450px){
-    .box {
-        width: 140px;
-        height: 145px;
-    }
-    h3 {
-        font-size: 12px;
     }
 
     .box img {
         width: 50px;
         height: 50px;
     }
+    .vanish {
+        display: inline;
+    }
+    footer {
+        height: 150px;
+        text-align: center;
+        line-height: 2.5;
+    }
+    footer#bottom .vanish .col-md-2 {
+        text-align: right;
+        width: 48%;
+        display: inline-block;
+    }
+    footer#bottom .vanish .col-md-2:nth-child(2), footer#bottom .col-md-1 {
+        text-align: left;
+        width: 48%;
+        display: inline-block;
+    }
+}
+
+@media (max-width: 768px) {
+    .section {
+        position: static;
+    }
+    .center {
+        margin: 0 auto 30px;
+    }
+    .box {
+        width: 165px;
+        height: 160px;
+    }
+    h3 {
+        font-size: 17px;
+    }
+    #separador {
+        display: block;
+        background-color: transparent;
+        border: 0;
+    }
+    .vanish .col-md-2:nth-child(3) {
+        display: none!important;
+    }
+    footer#bottom {
+        position: static;
+        height: 150px;
+    }
+    footer#bottom .col-md-1 {
+        text-align: center;
+        width: 100%;
+        display: block;
+    }
+}
+
+@media (min-height: 768px) {
+    footer#bottom {
+        position: fixed;
+        bottom: 0;
+    }
+}
+
+
+@media (max-width: 450px){
+    header {
+        min-height: 100px;
+    }
+    .section {
+        position: static;
+    }
+    .center {
+        margin: 0px 0 50px;
+    }
+    .box {
+        width: 140px;
+        height: 145px;
+    }
+    h3 {
+        font-size: 13px;
+    }
+
+    .box img {
+        width: 50px;
+        height: 50px;
+    }
+    .vanish {
+        display: none;
+    }
+    footer#bottom {
+        position: static;
+        height: 110px;
+    }
 }
 
 @media (max-width: 420px) {
-
     #bd {
         position: static;
         float: none;
         margin-top: 15px;
+    }
+    footer#bottom {
+        font-size: 12px;
+        height: 120px;
     }
 }
 
@@ -254,6 +351,22 @@ h4 {
     .box {
         width: 120px;
         height: 125px;
+    }
+    h3 {
+        font-size: 12px;
+    }
+
+    .box img {
+        width: 45px;
+        height: 45px;
+    }
+}
+
+@media (max-width: 350px){
+    .box {
+        width: 45%;
+        height: 125px;
+        margin: 5px;
     }
     h3 {
         font-size: 12px;
