--- a/assets/sosoares/css/styles-caixilharia.css
+++ b/assets/sosoares/css/styles-caixilharia.css
@@ -43,6 +43,8 @@
     url('../fonts/SourceSansPro-Regular.svg?') format('svg');
 }
 
+
+/*============================= BODY ==============================================*/
 body {
     background-color: #e8e8e8;
     font-family: Lighte, sans-serif;
@@ -87,6 +89,11 @@ p {
 
 #imgs img {
     margin: 5px;
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
 }
 
 .button {
@@ -96,7 +103,11 @@ p {
     border: 0;
     font-size: 16px;
     width: 107px;
-    
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
 }
 
 #search {
@@ -108,6 +119,11 @@ p {
     padding: 10px;
     color: #fff;
     margin-top: 33px;
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
 }
 
 td {
@@ -155,6 +171,11 @@ td {
 .title1, .title2, .title3, .title4 {
     color: #107ca4;
     font-size: 26px;
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
 }
 
 .title1 {
@@ -228,7 +249,7 @@ td {
     background-color: transparent;
 }
 
-/*=============================================================================*/
+/*============================== NAV ========================================= */
 nav {
     width: 100%;
     height: 50px;
@@ -306,7 +327,168 @@ nav a:hover {
     margin-bottom: 10px;
 }
 
-/*===================================================== */
+
+.grid-demo {
+    max-width: 1020px;
+    margin: 0 auto;
+}
+
+.navbar-collapse {
+    max-width: 1020px;
+    margin: 0 auto;
+}
+
+
+/*============================== SLIDER =======================================*/
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    border: 1px solid #fff;
+    text-align: left;
+    height: 65px;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+.slider-h1 {
+    font-family: ExtraLighte !important;
+    font-size: 30px;
+}
+.carousel-indicators li {
+    background-color: #004b67;
+    border: 0;
+}
+.carousel-indicators .active {
+    background-color: #969696;
+}
+.carousel-control {
+    border-radius: 10px;
+    width: 65px;
+    height: 65px;
+    display: inline-block;
+}
+.carousel-caption li {
+    display: inline-block;
+    height: 65px;
+}
+.control-try {
+    border-radius: 10px;
+    width: 65px;
+    height: 65px;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+}
+.carousel-caption2 {
+    width: 120px !important;
+    height: 50px !important;
+    margin-right: -100px !important;
+    margin-left: auto !important;
+}
+.control-try2 {
+    height: 50px !important;
+    padding-top: 7px;
+    padding-left: 15px;
+    width: 50px !important;
+}
+.control-try3 {
+    bottom: auto;
+    top: 50% !important;
+    background-image: none !important;
+    font-size: 40px !important;
+}
+.carousel-caption ul {
+    margin-top: -23px !important;
+}
+.button_slider {
+    background-color: #107ca4;
+    box-shadow: 0 3px 0 #05698e;
+    color: #fff;
+    border: 0;
+    font-size: 16px;
+    width: 107px;
+    margin-top: 16px;
+    margin-right: 20px;
+}
+.carousel-inner > .item > img {
+    max-width: 100%;
+}
+.selected img {
+    opacity:0.5;
+}
+.carousel-control {
+    border-radius: 10px;
+    width: 65px;
+    height: 65px;
+    display: inline-block;
+}
+.controls{
+    margin-top: 120px;
+    background-image: none !important;
+}
+.icon-tras{
+    font-size: 33px;
+    padding-top: 14px;
+    padding-right: 30px;
+}
+
+.icon-frente{
+    font-size: 33px;
+    padding-top: 14px;
+}
+.obras-list {
+    width: 250px;
+    height: 230px;
+    float: left;
+    margin: 12px;
+    position: relative;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+.obras-list img {
+    position: absolute;
+    width: 100%;
+    width: 250px;
+    height: 230px;
+    border-radius: 10px;
+}
+.obras-list p {
+    position: absolute;
+    z-index: 9;
+    font-size: 18px;
+    bottom: 0;
+    left: 19px;
+    width: 82%;
+    color: #FFFFFF !important;
+}
+
+
+/*============================== MEDIA QUERIES ===================================*/
+@media (max-width: 1150px) {
+    header .row .col-md-2 {
+        position: absolute;
+        right: 0;
+    }
+    header .row .col-md-2:nth-child(3) {
+        position: absolute;
+        right: 180px!important;
+    }
+    .slider-h1 {
+        font-size: 25px;
+    }
+    .title1 {
+        margin: 20px 20px 10px;
+    }
+    .col-md-4 .title1 {
+        margin: 20px 0 10px;
+    }
+    footer .col-md-9 {
+        width: 60%;
+    }
+}
+
 @media (max-width: 768px) {
 
     .content, .input, #contacts {
@@ -327,172 +509,3 @@ nav a:hover {
         text-align: left;
     }
 }
-
-
-
-.grid-demo {
-    max-width: 1020px;
-    margin: 0 auto;
-}
-
-.navbar-collapse {
-    max-width: 1020px;
-    margin: 0 auto;
-}
-
-.carousel-caption {
-    background-color: rgba(0, 0, 0, 0.3);
-    border-radius: 5px;
-    border: 1px solid #fff;
-    text-align: left;
-    height: 65px;
-    max-width: 1170px;
-    margin: 0 auto;
-}
-
-
-
-.slider-h1 {
-    font-family: ExtraLighte !important;
-    font-size: 30px;
-}
-
-.carousel-indicators li {
-    background-color: #004b67;
-    border: 0;
-}
-
-.carousel-indicators .active {
-    background-color: #969696;
-}
-
-.carousel-control {
-    border-radius: 10px;
-    width: 65px;
-    height: 65px;
-    display: inline-block;
-}
-
-.carousel-caption li {
-    display: inline-block;
-    height: 65px;
-}
-.control-try {
-    border-radius: 10px;
-    width: 65px;
-    height: 65px;
-    display: inline-block;
-    text-align: center;
-    color: #fff;
-    font-size: 30px;
-}
-
-.carousel-caption2 {
-  
-    width: 120px !important;
-    height: 50px !important;
-    margin-right: -100px !important;
-    margin-left: auto !important;
-}
-
-.control-try2 {
- 
-    height: 50px !important;
-    padding-top: 7px;
-    padding-left: 15px;
-    width: 50px !important;
-}
-
-.control-try3 {
-    bottom: auto;
-    top: 50% !important;
-    background-image: none !important;
-    font-size: 40px !important;
-}
-
-.carousel-caption ul {
-    /*margin-top: -3%;*/
-    margin-top: -23px !important;
-}
-
-
-.button_slider {
-    background-color: #107ca4;
-    box-shadow: 0 3px 0 #05698e;
-    color: #fff;
-    border: 0;
-    font-size: 16px;
-    width: 107px;
-    margin-top: 16px;
-    margin-right: 20px;
-    
-}
-
- .carousel-inner > .item > img {
-max-width: 100%;
-}
-
-.selected img {
-	opacity:0.5;
-}
-
-.carousel-control {
-    border-radius: 10px;
-    width: 65px;
-    height: 65px;
-    display: inline-block;
-}
-
-.controls{
-    margin-top: 120px;
-    background-image: none !important;
-}
-
-.icon-tras{
-    font-size: 33px;
-    font-size: 33px;
-    padding-top: 14px;
-    padding-right: 30px;
-}
-
-.icon-frente{
-    font-size: 33px;
-    font-size: 33px;
-    padding-top: 14px;
-    
-}
-
-.obras-list {
-width: 250px;
-height: 230px;
-/*border: 1px solid #c1c1c1;*/
-float: left;
-margin: 12px;
-position: relative;
-box-sizing: border-box;
--moz-box-sizing: border-box;
-}
-
-.obras-list:hover {
-/*border-color: #f78f1e;*/
-}
-
-.obras-list img {
-position: absolute;
-width: 100%;
-width: 250px;
-height: 230px;
-border-radius: 10px;
-}
-
-.obras-list p {
-position: absolute;
-z-index: 9;
-font-size: 18px;
-bottom: 0;
-left: 19px;
-width: 82%;
-color: #FFFFFF !important;
-}
-
-
