--- a/assets/sosoares/css/styles-caixilharia.css
+++ b/assets/sosoares/css/styles-caixilharia.css
@@ -339,7 +339,7 @@ nav a:hover {
 }
 
 .active {
-    background-color: #000;
+    background-color: #000!important;
 }
 
 /*============================== SLIDER =======================================*/
