--- a/assets/sosoares/styles.css
+++ b/assets/sosoares/styles.css
@@ -1,90 +1,69 @@
+/*============================== FONTS =======================================*/
 @font-face {
-    font-family: Lighte;
+    font-family: 'SourceSansPro';
     src: url('fonts/SourceSansPro-Light.eot?');
-    src: url('fonts/SourceSansPro-Light.eot?#iefix') format('embedded-opentype'),
-    url('fonts/SourceSansPro-Light.otf.woff?') format('woff'),
-    url('fonts/SourceSansPro-Light.ttf.woff?') format('truetype'),
-    url('fonts/SourceSansPro-Light.svg?') format('svg');
+    src: url('fonts/SourceSansPro-Light.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-Light.otf.woff?') format('woff'), url('fonts/SourceSansPro-Light.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-Light.svg?') format('svg');
+    font-style: normal;
+    font-weight: 300;
 }
 
 @font-face {
-    font-family: Bolde;
+    font-family: 'SourceSansPro';
     src: url('fonts/SourceSansPro-Bold.eot?');
-    src: url('fonts/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'),
-    url('fonts/SourceSansPro-Bold.otf.woff?') format('woff'),
-    url('fonts/SourceSansPro-Bold.ttf.woff?') format('truetype'),
-    url('fonts/SourceSansPro-Bold.svg?') format('svg');
+    src: url('fonts/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-Bold.otf.woff?') format('woff'), url('fonts/SourceSansPro-Bold.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-Bold.svg?') format('svg');
+    font-style: normal;
+    font-weight: 700;
 }
 
 @font-face {
-    font-family: Blacke;
+    font-family: 'SourceSansPro';
     src: url('fonts/SourceSansPro-Black.eot?');
-    src: url('fonts/SourceSansPro-Black.eot?#iefix') format('embedded-opentype'),
-    url('fonts/SourceSansPro-Black.otf.woff?') format('woff'),
-    url('fonts/SourceSansPro-Black.ttf.woff?') format('truetype'),
-    url('fonts/SourceSansPro-Black.svg?') format('svg');
+    src: url('fonts/SourceSansPro-Black.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-Black.otf.woff?') format('woff'), url('fonts/SourceSansPro-Black.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-Black.svg?') format('svg');
+    font-style: normal;
+    font-weight: 900;
 }
 
 @font-face {
-    font-family: Regulare;
+    font-family: 'SourceSansPro';
     src: url('fonts/SourceSansPro-Regular.eot?');
-    src: url('fonts/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'),
-    url('fonts/SourceSansPro-Regular.otf.woff?') format('woff'),
-    url('fonts/SourceSansPro-Regular.ttf.woff?') format('truetype'),
-    url('fonts/SourceSansPro-Regular.svg?') format('svg');
+    src: url('fonts/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-Regular.otf.woff?') format('woff'), url('fonts/SourceSansPro-Regular.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-Regular.svg?') format('svg');
+    font-style: normal;
+    font-weight: normal;
 }
 
+/*============================== BODY =======================================*/
 body {
     background: url("img/Castoral.jpg") #e8e8e8 no-repeat fixed center;
     background-size: cover;
-    font-family: Lighte, sans-serif;
+    font-family: 'SourceSansPro', Arial, sans-serif;
+    font-weight: 300;
     font-size: 14px;
     color: #494949;
 }
 
-header {
-    width: 100%;
-    height: 100px;
-    padding: 15px;
-}
-
+header {width:100%;height:100px;padding:15px;}
 footer {
-    background-color: #f0f0f0;
-    width: 100%;
-    height: 90px;
+    background-color:#f0f0f0;
+    width:100%;
+    height:90px;
     -webkit-transition: all 300ms linear;
     -moz-transition: all 300ms linear;
     -o-transition: all 300ms linear;
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
 }
-
-#bottom {
-    position: fixed;
-    bottom: 0;
-}
-
-footer .content {
-    padding-top: 25px;
-}
-
-p {
-    line-height: 1.8;
-}
-
+#bottom {position:fixed;bottom:0;}
+footer .content {padding-top:25px;}
+p {line-height:1.8;}
 .button {
-    background-color: #107ca4 !important;
-    box-shadow: 0 3px 0 #05698e !important;
-    color: #fff !important;
-    border: 0;
-    font-size: 14px !important;
-    width: 107px !important;
+    background-color:#107ca4!important;
+    box-shadow: 0 3px 0 #05698e!important;
+    color:#fff!important;
+    border:0;
+    font-size:14px!important;
+    width:107px!important;
 }
-
-footer b {
-    font-family: Bolde, sans-serif;
-}
-
+footer b {font-weight: 700;}
 #bd {
     float: right;
     display: inline-block;
@@ -95,7 +74,7 @@ footer b {
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
 }
-
+/*============================== CAIXAS =======================================*/
 .box {
     width: 165px;
     height: 160px;
@@ -110,66 +89,21 @@ footer b {
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
 }
+#caixilharia {background-color:#107ca4;box-shadow: 0 8px 0 #05698e;}
+#caixilharia:hover {background-color:#05698e;box-shadow: 0 8px 0 #05698e;transition: 0.7s;-webkit-transition: 0.7s;}
+#vidro {background-color: #01adee;box-shadow: 0 8px 0 #0088bc;}
+#vidro:hover {background-color: #0088bc;box-shadow: 0 8px 0 #0088bc;transition: 0.7s;-webkit-transition: 0.7s;}
+#extrusao {background-color: #797979;box-shadow: 0 8px 0 #5a5a5a;}
+#extrusao:hover {background-color: #5a5a5a;box-shadow: 0 8px 0 #5a5a5a;transition: 0.7s;-webkit-transition: 0.7s;}
+#abrasivos {background-color: #585858;box-shadow: 0 8px 0 #3f3f3f;}
+#abrasivos:hover {background-color: #3f3f3f;box-shadow: 0 8px 0 #3f3f3f;transition: 0.7s;-webkit-transition: 0.7s;}
 
-
-#caixilharia {
-    background-color: #107ca4;
-    box-shadow: 0 8px 0 #05698e;
-}
-
-#caixilharia:hover {
-    background-color: #05698e;
-    box-shadow: 0 8px 0 #05698e;
-    transition: 0.7s;
-    -webkit-transition: 0.7s;
-}
-
-#vidro {
-    background-color: #01adee;
-    box-shadow: 0 8px 0 #0088bc;
-}
-
-#vidro:hover {
-    background-color: #0088bc;
-    box-shadow: 0 8px 0 #0088bc;
-    transition: 0.7s;
-    -webkit-transition: 0.7s;
-}
-
-#extrusao {
-    background-color: #797979;
-    box-shadow: 0 8px 0 #5a5a5a;
-}
-
-#extrusao:hover {
-    background-color: #5a5a5a;
-    box-shadow: 0 8px 0 #5a5a5a;
-    transition: 0.7s;
-    -webkit-transition: 0.7s;
-}
-
-#abrasivos {
-    background-color: #585858;
-    box-shadow: 0 8px 0 #3f3f3f;
-}
-
-#abrasivos:hover {
-    background-color: #3f3f3f;
-    box-shadow: 0 8px 0 #3f3f3f;
-    transition: 0.7s;
-    -webkit-transition: 0.7s;
-}
-
-.center {
-    width: 70%;
-    margin: 0 auto 100px;
-    padding: 15px 0;
-}
-
+.center {width: 70%;margin: 0 auto 100px;padding: 15px 0;}
+#separador {display: none;}
 h3 {
     color: #fff;
     font-size: 17px;
-    font-family: Regulare;
+    font-weight: normal;
     margin: 10px auto;
     width: 100%;
     -webkit-transition: all 300ms linear;
@@ -178,15 +112,13 @@ h3 {
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
 }
-h4 {
+.valign {
+    vertical-align: top;
     display: inline-block;
-    color: #494949;
-    font-size: 13px;
-    font-family: Blacke;
+    padding: 5px 0;
+    height: 34px;
 }
-#separador {
-    display: none;
-}
+h4 {display: inline-block;color: #494949;font-size: 13px;font-weight: 900;margin: 0}
 .section {
     position: absolute;
     top: 35%!important;
@@ -197,183 +129,61 @@ h4 {
     -o-transition: all 300ms linear;
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
+    vertical-align: top;
 }
+.font {font-size: 70px;color: #fff;}
 
-
+/*============================== MEDIA QUERIES =======================================*/
 @media (max-width: 1200px) {
-    #bd {
-        position: absolute;
-        top: 0;
-        right: 5%;
-    }
-    .center {
-        width: 90%;
-        text-align: center;
-    }
-    footer#bottom .row {
-        width: 100%;
-    }
-    .section {
-        top: 30%!important;
-    }
+    #bd {position: absolute;top: 0;right: 5%;}
+    .center {width: 90%;text-align: center;}
+    footer#bottom .row {width: 100%;}
+    .section {top: 30%!important;}
 }
-
 @media (max-width: 995px) {
-    #bd {
-        top: -40px;
-    }
-    .section {
-        top: 20%!important;
-    }
-    .center {
-        width: 100%;
-        padding: 15px 0;
-        margin: 0 auto 200px;
-    }
-
-    .box {
-        width: 147px;
-        height: 150px;
-    }
-    h3 {
-        font-size: 14px;
-    }
-
-    .box img {
-        width: 50px;
-        height: 50px;
-    }
-    .vanish {
-        display: inline;
-    }
-    footer {
-        height: 150px;
-        text-align: center;
-        line-height: 2.5;
-    }
-    footer#bottom .vanish .col-md-2 {
-        text-align: right;
-        width: 48%;
-        display: inline-block;
-    }
-    footer#bottom .vanish .col-md-2:nth-child(2), footer#bottom .col-md-1 {
-        text-align: left;
-        width: 48%;
-        display: inline-block;
-    }
+    #bd {top: -40px;}
+    .section {top: 20%!important;}
+    .center {width: 100%;padding: 15px 0;margin: 0 auto 200px;}
+    .box {width: 147px;height: 150px;}
+    h3 {font-size: 14px;}
+    .font {font-size: 60px}
+    .vanish {display: inline;}
+    footer {height: 150px;text-align: center;line-height: 2.5;}
+    footer#bottom .vanish .col-md-2 {text-align: right;width: 48%;display: inline-block;}
+    footer#bottom .vanish .col-md-2:nth-child(2), footer#bottom .col-md-1 {text-align: left;width: 48%;display: inline-block;}
 }
-
 @media (max-width: 768px) {
-    .section {
-        position: static;
-    }
-    .center {
-        margin: 0 auto 30px;
-    }
-    .box {
-        width: 165px;
-        height: 160px;
-    }
-    h3 {
-        font-size: 17px;
-    }
-    #separador {
-        display: block;
-        background-color: transparent;
-        border: 0;
-    }
-    .vanish .col-md-2:nth-child(3) {
-        display: none!important;
-    }
-    footer#bottom {
-        position: static;
-        height: 150px;
-    }
-    footer#bottom .col-md-1 {
-        text-align: center;
-        width: 100%;
-        display: block;
-    }
+    .section {position: static;}
+    .center {margin: 0 auto 30px;}
+    .box {width: 165px;height: 160px;}
+    h3 {font-size: 17px;}
+    #separador {display: block;background-color: transparent;border: 0;}
+    .vanish .col-md-2:nth-child(3) {display: none!important;}
+    footer#bottom {position: static;height: 150px;}
+    footer#bottom .col-md-1 {text-align: center;width: 100%;display: block;}
 }
-
 @media (min-height: 768px) {
-    footer#bottom {
-        position: fixed;
-        bottom: 0;
-    }
+    footer#bottom {position: fixed;bottom: 0;}
 }
-
-
 @media (max-width: 450px){
-    header {
-        min-height: 100px;
-    }
-    .section {
-        position: static;
-    }
-    .center {
-        margin: 0px 0 50px;
-    }
-    .box {
-        width: 140px;
-        height: 145px;
-    }
-    h3 {
-        font-size: 13px;
-    }
-
-    .box img {
-        width: 50px;
-        height: 50px;
-    }
-    .vanish {
-        display: none;
-    }
-    footer#bottom {
-        position: static;
-        height: 110px;
-    }
+    header {min-height: 100px;}
+    .section {position: static;}
+    .center {margin: 0px 0 50px;}
+    .box {width: 140px;height: 145px;}
+    h3 {font-size: 13px;}
+    .vanish {display: none;}
+    footer#bottom {position: static;height: 110px;}
 }
-
 @media (max-width: 420px) {
-    #bd {
-        position: static;
-        float: none;
-        margin-top: 15px;
-    }
-    footer#bottom {
-        font-size: 12px;
-        height: 120px;
-    }
+    #bd {position: static;float: none;margin-top: 15px;}
+    footer#bottom {font-size: 12px;height: 120px;}
 }
-
 @media (max-width: 390px){
-    .box {
-        width: 120px;
-        height: 125px;
-    }
-    h3 {
-        font-size: 12px;
-    }
-
-    .box img {
-        width: 45px;
-        height: 45px;
-    }
+    .box {width: 120px;height: 125px;}
+    h3 {font-size: 13px;}
 }
-
 @media (max-width: 350px){
-    .box {
-        width: 45%;
-        height: 125px;
-        margin: 5px;
-    }
-    h3 {
-        font-size: 12px;
-    }
-
-    .box img {
-        width: 45px;
-        height: 45px;
-    }
+    .box {width: 45%;height: 125px;margin: 5px;}
+    h3 {font-size: 13px;font-weight: 300;}
+    .font {font-size: 50px}
 }
