--- a/assets/sosoares/css/styles-caixilharia.css
+++ b/assets/sosoares/css/styles-caixilharia.css
@@ -41,6 +41,13 @@
 
 
 /*============================= BODY ==============================================*/
+* {
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
+}
 body {
     background-color: #e8e8e8;
     font-family: 'SourceSansPro', Arial, sans-serif;
@@ -48,7 +55,9 @@ body {
     font-size: 16px;
     color: #494949;
 }
-
+a:hover {
+    text-decoration: none;
+}
 header {
     width: 100%;
     height: 100px;
@@ -56,6 +65,14 @@ header {
     padding: 15px;
 }
 
+.font {
+    font-size: 50px;
+    color: #fff;
+    font-weight: 100;
+}
+.font-active {
+    color: #01aef0!important;
+}
 footer {
     margin-top: 0px !important;
     padding-top: 25px;
@@ -466,49 +483,47 @@ nav .navbar-nav li:hover {
 
 /*============================== MEDIA QUERIES ===================================*/
 @media (max-width: 1150px) {
-    header .row .col-md-2 {
-        position: absolute;
-        right: 0;
-    }
-    header .row .col-md-2:nth-child(3) {
-        position: absolute;
-        right: 180px!important;
-    }
-    .slider-h1 {
-        font-size: 25px;
-    }
-    .title1 {
-        margin: 20px 20px 10px;
-    }
-    .col-md-4 .title1 {
-        margin: 20px 0 10px;
-    }
-    footer .col-md-9 {
-        width: 60%;
-    }
+    header > .content > .container > .row .col-md-3,
+    header > .content > .container > .row .col-md-2,
+    header > .content > .container > .row .col-md-5
+            {position: absolute;display: inline-block;top: 20px;}
+    header > .content > .container > .row .col-md-5 {left: 250px;}
+    header > .content > .container > .row .col-md-2 {top: 0;right: 0;}
+    header .row .col-md-2:nth-child(3) {right: 180px!important;}
+
+    .slider-h1 {font-size: 25px;}
+    .title1 {margin: 20px 20px 10px;}
+    .col-md-4 .title1 {margin: 20px 0 10px;}
+    footer .col-md-9 {width: 60%;}
 }
 
 @media (max-width: 991px) {
-    header > .content > .container > .row .col-md-3,
-    header > .content > .container > .row .col-md-2,
-    header > .content > .container > .row .col-md-5{
-        display: inline-block;
-    }
-    section > .container > .row .col-md-8 {
-        display: inline-block;
-        width: 55%;
-        vertical-align: top;
-    }
-    section > .container > .row .col-md-4 {
-        display: inline-block;
-        width: 40%;
-        vertical-align: top;
-    }
-    footer > .content > .container > .row .col-md-9,
-    footer > .content > .container > .row .col-md-3 {
-        display: inline-block;
-    }
+    header > .content > .container > .row .col-md-2:nth-child(3) {right: 110px!important;}
 
+    section > .container > .row .col-md-8 {display: inline-block;width: 55%;vertical-align: top;}
+    section > .container > .row .col-md-4 {display: inline-block;width: 40%;vertical-align: top;}
+
+    footer > .content > .container > .row .col-md-9,
+    footer > .content > .container > .row .col-md-3 {display: inline-block;}
+    footer > .content > .container > .row > #contacts [class^="col-"],
+    footer > .content > .container > .row > #contacts [class*="col-"] {display: inline-block;}
+    footer .col-md-9 {width: 45%;}
+    .carousel-caption {
+        margin: 0 -70px;
+        width: 80%;
+    }
+    .slider-h1 {font-size: 30px;}
+}
+@media (max-width: 800px) {
+    header {
+        height: 200px;
+    }
+    header > .content > .container > .row .col-md-2 {top: 50px;right: 0;}
+    .carousel-caption {
+        margin: 0 -70px;
+        width: 85%;
+    }
+    footer .col-md-9 {width: 40%;}
 }
 
 @media (max-width: 768px) {
