--- a/assets/sosoares/styles.css
+++ b/assets/sosoares/styles.css
@@ -41,6 +41,9 @@ body {
     color: #494949;
 }
 
+a:hover {
+    text-decoration: none;
+}
 header {width:100%;height:100px;padding:15px;}
 footer {
     background-color:#f0f0f0;
