--- a/assets/sosoares/css/styles-caixilharia.css
+++ b/assets/sosoares/css/styles-caixilharia.css
@@ -78,7 +78,7 @@ footer {
     padding-top: 25px;
     background-color: #f0f0f0;
     width: 100%;
-    height: 250px;
+    min-height: 250px;
     font-size: 14px;
 }
 
@@ -97,7 +97,7 @@ p {
 }
 
 .content {
-    width: 1170px;
+    max-width: 1170px;
     margin: auto;
 }
 
@@ -139,6 +139,10 @@ p {
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
 }
+.yamm .nav, .yamm .collapse {
+    margin: 0;
+    padding: 0;
+}
 
 td {
     padding: 10px;
@@ -164,7 +168,7 @@ td {
 }
 
 #contacts {
-    width: 1000px;
+    width: 100%;
     display: inline-block;
     font-size: 14px;
     margin-top: 15px;
@@ -271,6 +275,10 @@ nav {
 
 nav a {
     color: #ff0;
+}
+.navbar {
+    z-index: 1001!important;
+    background-color: #016285;
 }
 
 nav a:hover {
@@ -513,12 +521,16 @@ nav .navbar-nav li:hover {
         width: 80%;
     }
     .slider-h1 {font-size: 30px;}
+    .navbar-nav > li > a {
+        font-size: 14px;
+        padding: 15px 10px;
+    }
 }
 @media (max-width: 800px) {
     header {
         height: 200px;
     }
-    header > .content > .container > .row .col-md-2 {top: 50px;right: 0;}
+    header > .content > .container > .row .col-md-5 {top: 90px;left: 0;}
     .carousel-caption {
         margin: 0 -70px;
         width: 85%;
@@ -532,17 +544,43 @@ nav .navbar-nav li:hover {
         width: 100% !important;
     }
 
-    nav > .content {
+    .nav > li {
+        background-color: #016285;
+    }
+    .yamm .dropdown.yamm-fw .dropdown-menu {
+        display: none;
+    }
+
+    .carousel-caption {
         display: none;
     }
 
     header {
-        height: 200px;
+        height: 160px;
     }
+
+    section > .container > .row .col-md-8, section > .container > .row .col-md-4 {display: block; width: 100%}
+
+
+    footer > .content > .container > .row .col-md-9 {
+        width: 100%;
+        text-align: center;
+    }
+    footer > .content > .container > .row .col-md-3 {
+        display: none;
+    }
+    footer > .content > .container > .row > #contacts [class^="col-"],
+    footer > .content > .container > .row > #contacts [class*="col-"] {display: block;text-align: center;}
+
+    footer > .content > .container > .row > #contacts .col-md-1 {display: none}
 }
+@media (max-width: 580px) {
+    header > .content > .container > .row .col-md-2:nth-child(3) {top:60px;right: 0!important;}
+}
+/*
 
 @media (max-width: 990px) {
     #date {
         text-align: left;
     }
-}
+}*/
