--- a/assets/sosoares/css/styles-vidro.css
+++ b/assets/sosoares/css/styles-vidro.css
@@ -1,332 +1,8 @@
-@font-face {
-    font-family: ExtraLighte;
-    src: url('../fonts/SourceSansPro-ExtraLight.eot?');
-    src: url('../fonts/SourceSansPro-ExtraLight.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/SourceSansPro-ExtraLight.otf.woff?') format('woff'),
-    url('../fonts/SourceSansPro-ExtraLight.ttf.woff?') format('truetype'),
-    url('../fonts/SourceSansPro-ExtraLight.svg?') format('svg');
-}
+header, .form #search {background-color: #3b6a7c;}
 
-@font-face {
-    font-family: Lighte;
-    src: url('../fonts/SourceSansPro-Light.eot?');
-    src: url('../fonts/SourceSansPro-Light.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/SourceSansPro-Light.otf.woff?') format('woff'),
-    url('../fonts/SourceSansPro-Light.ttf.woff?') format('truetype'),
-    url('../fonts/SourceSansPro-Light.svg?') format('svg');
-}
+nav, .navbar {background-color: #01adef;}
+nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus, .dropdown-menu {background-color: #054568;}
+.curr {background-color: #2576a3;}
 
-@font-face {
-    font-family: Bolde;
-    src: url('../fonts/SourceSansPro-Bold.eot?');
-    src: url('../fonts/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/SourceSansPro-Bold.otf.woff?') format('woff'),
-    url('../fonts/SourceSansPro-Bold.ttf.woff?') format('truetype'),
-    url('../fonts/SourceSansPro-Bold.svg?') format('svg');
-}
-
-@font-face {
-    font-family: Blacke;
-    src: url('../fonts/SourceSansPro-Black.eot?');
-    src: url('../fonts/SourceSansPro-Black.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/SourceSansPro-Black.otf.woff?') format('woff'),
-    url('../fonts/SourceSansPro-Black.ttf.woff?') format('truetype'),
-    url('../fonts/SourceSansPro-Black.svg?') format('svg');
-}
-
-@font-face {
-    font-family: Regulare;
-    src: url('../fonts/SourceSansPro-Regular.eot?');
-    src: url('../fonts/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/SourceSansPro-Regular.otf.woff?') format('woff'),
-    url('../fonts/SourceSansPro-Regular.ttf.woff?') format('truetype'),
-    url('../fonts/SourceSansPro-Regular.svg?') format('svg');
-}
-
-body {
-    background-color: #e8e8e8;
-    font-family: Lighte, sans-serif;
-    font-size: 16px;
-    color: #494949;
-}
-
-header {
-    width: 100%;
-    height: 100px;
-    background-color: #3a6a7c;
-    padding: 15px;
-}
-
-
-footer {
-    margin-top: 50px;
-    padding-top: 25px;
-    background-color: #f0f0f0;
-    width: 100%;
-    height: 250px;
-    font-size: 14px;
-}
-
-p {
-    line-height: 1.8;
-}
-
-.content {
-    width: 1170px;
-    margin: auto;
-}
-
-#imgs img {
-    margin: 5px;
-}
-
-.button {
-    background-color: #107ca4;
-    box-shadow: 0 3px 0 #05698e;
-    color: #fff;
-    border: 0;
-    font-size: 16px;
-    width: 107px;
-}
-
-#search {
-    background-color: #3a6a7c;
-    width: 175px;
-    border-radius: 5px;
-    border: 1px solid #107ca4;
-    height: 35px;
-    padding: 10px;
-    color: #fff;
-    margin-top: 33px;
-}
-
-td {
-    padding: 10px;
-}
-
-#date {
-    text-align: right;
-    font-weight: bolder;
-    font-size: 16px;
-}
-
-#text {
-    vertical-align: top;
-}
-
-.input {
-    background-color: #e8e8e8;
-    width: 247px;
-    height: 35px;
-    border-radius: 5px;
-    border: 1px solid #107ca4;
-    padding: 10px;
-}
-
-#contacts {
-    width: 1000px;
-    display: inline-block;
-    font-size: 14px;
-}
-
-footer b {
-    font-weight: bolder;
-    font-size: 14px;
-}
-
-
-
-/*===================================================== */
-
-nav {
-    width: 100%;
-    height: 50px;
-    background-color: #01adef;
-}
-
-nav a {
-    color: #ff0;
-}
-
-nav a:hover {
-    color: #fff;
-}
-
-.navbar-default {
-    background-color: transparent;
-    border: 0;
-}
-
-.navbar-nav > li > a {
-    color: #fff !important;
-    font-size: 16px;
-}
-
-.dropdown-menu {
-    background-color: #054568;
-    border: 0;
-    border-radius: 0;
-}
-
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    background-color: #054568;
-}
-
-.grid-demo .row [class*="col-"] {
-    background-color: transparent;
-    border: 0;
-    color: #fff;
-}
-
-.grid-demo .row .row [class*="col-"] {
-    border-left: 1px solid #16627e;
-    padding-bottom: 10px;
-}
-
-.menu-h3 {
-    font-size: 12px;
-    display: block;
-    font-family: Bolde !important;
-    text-align: left;
-    color: #00aeed;
-    text-transform: uppercase;
-    height: 35px;
-}
-
-.grid-demo li,
-.grid-demo li a {
-    font-size: 14px;
-    line-height: 1.6;
-    text-align: left;
-    color: #fff;
-    display: block;
-}
-
-.grid-demo li:last-child {
-    margin-bottom: 15px;
-}
-
-.li-b {
-    color: #00aeed;
-    font-size: 12px;
-    font-family: Regulare !important;
-    font-weight: 400;
-    display: block;
-    margin-bottom: 10px;
-}
-
-
-@media (max-width: 768px) {
-
-    .content, .input, #contacts {
-        width: 100% !important;
-    }
-
-    nav > .content {
-        display: none;
-    }
-  
-    header {
-        height: 200px;
-    }
-}
-
-@media (max-width: 990px) {    
-    #date {
-        text-align: left;
-    }
-}
-
-.grid-demo {
-    max-width: 1020px;
-    margin: 0 auto;
-}
-
-.navbar-collapse {
-    max-width: 1020px;
-    margin: 0 auto;
-}
-
-#bd {
-    display: inline-block;
-    margin: 5px;
-}
-
-.title1 {
-    color: #107ca4;
-    font-size: 26px;
-    font-weight: 100;
-}
-
-.title2 {
-    color: #107ca4;
-    font-size: 18px;
-    font-weight: 100;
-}
-
-.carousel-caption {
-    background-color: rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    border: 1px solid #fff;
-    text-align: left;
-    height: 65px;
-    max-width: 1170px;
-    margin: 0 auto;
-}
-
-.slider-h1 {
-    font-family: ExtraLighte !important;
-    font-size: 30px;
-}
-
-.carousel-indicators li {
-    background-color: #004b67;
-    border: 0;
-}
-
-.carousel-indicators .active {
-    background-color: #969696;
-}
-
-.carousel-control {
-    border-radius: 10px;
-    width: 65px;
-    height: 65px;
-    display: inline-block;
-}
-
-.carousel-caption li {
-    display: inline-block;
-    height: 65px;
-}
-.control-try {
-    border-radius: 10px;
-    width: 65px;
-    height: 65px;
-    display: inline-block;
-    text-align: center;
-    color: #fff;
-    font-size: 30px;
-}
-
-.carousel-caption ul {
-    /*margin-top: -3%;*/
-    margin-top: -23px !important;
-}
-
- .carousel-inner > .item > img {
-width: 100%;
-}
-
-
-.button_slider {
-    background-color: #107ca4;
-    box-shadow: 0 3px 0 #05698e;
-    color: #fff;
-    border: 0;
-    font-size: 16px;
-    width: 107px;
-    margin-top: 16px;
-    margin-right: 20px;
-    
-}
+.menu-h3, .li-b {color: #04adf2;}
