--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -38,7 +38,10 @@
     font-style: normal;
     font-weight: normal;
 }
-
+/*============================= Menu ==============================================*/
+.menu-h3>a {
+    color: #fff !important;
+}
 
 /*============================= BODY ==============================================*/
 *, div {
