--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -191,8 +191,8 @@ div#map, div#map div {
     transition: none;
 }
 
-div#map.instaladores > #map-canvas {
-    height: 600px;
+div#map-instaladores > #map-canvas {
+    height: 550px;
 }
 
 /*============================== CANDIDATURAS ===================================*/
