--- a/assets/sosoares/css/component.css
+++ b/assets/sosoares/css/component.css
@@ -1,11 +1,11 @@
 .grid {
-	max-width: 69em;
+	/*max-width: 69em;*/
 	list-style: none;
 	margin: 30px auto;
 	padding: 0;
 }
 
-.grid li {
+.grid a {
 	display: block;
 	float: left;
 	padding: 7px;
@@ -13,14 +13,14 @@
 	opacity: 0;
 }
 
-.grid li.shown,
-.no-js .grid li,
-.no-cssanimations .grid li {
+.grid a.shown,
+.no-js .grid a,
+.no-cssanimations .grid a {
 	opacity: 1;
 }
 
-.grid li a,
-.grid li img {
+.grid a,
+.grid a div img {
 	outline: none;
 	border: none;
 	display: block;
@@ -162,7 +162,7 @@
 	perspective: 1300px;
 }
 
-.grid.effect-6 li.animate {
+.grid.effect-6 a.animate {
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
 	transform-style: preserve-3d;
