--- a/assets/sosoares/styles.css
+++ b/assets/sosoares/styles.css
@@ -48,31 +48,32 @@ footer {background-color:#f0f0f0;width:100%;height:90px;
 #bottom {position:fixed;bottom:0;}
 footer .content {padding-top:25px;}
 p {line-height:1.8;}
+.btn {padding: 6px 8px;}
 .button {background-color:#107ca4!important;box-shadow: 0 3px 0 #05698e!important;color:#fff!important;border:0;font-size:14px!important;width:107px!important;}
 footer b {font-weight: 700;}
 #bd {float: right;display: inline-block;margin: 5px;
     -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
 /*============================== CAIXAS =======================================*/
-.box {width: 165px;height: 160px;display: inline-block;border-radius: 5px;margin: 15px;text-align: center;padding: 30px 15px;
+.box {width: 170px;height: 170px;display: inline-block;border-radius: 100%;margin: 15px;text-align: center;padding: 30px 15px;
     -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
-#caixilharia {background-color:#107ca4;box-shadow: 0 8px 0 #05698e;}
-#caixilharia:hover {background-color:#05698e;box-shadow: 0 8px 0 #05698e;transition: 0.7s;-webkit-transition: 0.7s;}
-#vidro {background-color: #01adee;box-shadow: 0 8px 0 #0088bc;}
-#vidro:hover {background-color: #0088bc;box-shadow: 0 8px 0 #0088bc;transition: 0.7s;-webkit-transition: 0.7s;}
-#extrusao {background-color: #797979;box-shadow: 0 8px 0 #5a5a5a;}
-#extrusao:hover {background-color: #5a5a5a;box-shadow: 0 8px 0 #5a5a5a;transition: 0.7s;-webkit-transition: 0.7s;}
-#abrasivos {background-color: #585858;box-shadow: 0 8px 0 #3f3f3f;}
-#abrasivos:hover {background-color: #3f3f3f;box-shadow: 0 8px 0 #3f3f3f;transition: 0.7s;-webkit-transition: 0.7s;}
+#caixilharia {background-color:#107ca4;}
+#caixilharia:hover {background-color:#05698e;transition: 0.7s;-webkit-transition: 0.7s;}
+#vidro {background-color: #01adee;}
+#vidro:hover {background-color: #0088bc;transition: 0.7s;-webkit-transition: 0.7s;}
+#extrusao {background-color: #797979;}
+#extrusao:hover {background-color: #5a5a5a;transition: 0.7s;-webkit-transition: 0.7s;}
+#abrasivos {background-color: #585858;}
+#abrasivos:hover {background-color: #3f3f3f;transition: 0.7s;-webkit-transition: 0.7s;}
 
-.center {width: 70%;margin: 0 auto 100px;padding: 15px 0;}
+.center {width: 80%;margin: 0 auto 100px;padding: 15px 0;text-align: center;}
 #separador {display: none;}
 h3 {color: #fff;font-size: 17px;font-weight: normal;margin: 10px auto;width: 100%;}
 .valign {vertical-align: top;display: inline-block;padding: 5px 0;height: 34px;}
 h4 {display: inline-block;color: #494949;font-size: 13px;font-weight: 900;margin: 0}
 .section {position: absolute;top: 35%!important;right: 0;left: 0;vertical-align: top;}
-.font {font-size: 70px;color: #fff;}
+.font {font-size: 60px;color: #fff;}
 
 /*============================== MEDIA QUERIES =======================================*/
 @media (max-width: 1200px) {
