--- a/assets/sosoares/styles_fonts.css
+++ b/assets/sosoares/styles_fonts.css
@@ -1,106 +1,112 @@
 @font-face {
-	font-family: 'sosoares';
-	src:url('fonts/sosoares.eot?nzru5m');
-	src:url('fonts/sosoares.eot?#iefixnzru5m') format('embedded-opentype'),
-		url('fonts/sosoares.woff?nzru5m') format('woff'),
-		url('fonts/sosoares.ttf?nzru5m') format('truetype'),
-		url('fonts/sosoares.svg?nzru5m#sosoares') format('svg');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'sosoares_site';
+    src:url('fonts/sosoares_site.eot?-np0eb6');
+    src:url('fonts/sosoares_site.eot?#iefix-np0eb6') format('embedded-opentype'),
+    url('fonts/sosoares_site.woff?-np0eb6') format('woff'),
+    url('fonts/sosoares_site.ttf?-np0eb6') format('truetype'),
+    url('fonts/sosoares_site.svg?-np0eb6#sosoares_site') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-	font-family: 'sosoares';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
+    font-family: 'sosoares_site';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
 
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-tratamento_new:before {
+    content: "\e61b";
+}
+.icon-extrusao_new:before {
+    content: "\e61c";
+}
 .icon-front:before {
-	content: "\e61a";
+    content: "\e61a";
 }
 .icon-vidro:before {
-	content: "\e600";
+    content: "\e600";
 }
 .icon-tratamento:before {
-	content: "\e601";
+    content: "\e601";
 }
 .icon-telefone:before {
-	content: "\e602";
+    content: "\e602";
 }
 .icon-tecnica:before {
-	content: "\e603";
+    content: "\e603";
 }
 .icon-sosoares:before {
-	content: "\e604";
+    content: "\e604";
 }
 .icon-servicos_vidro:before {
-	content: "\e605";
+    content: "\e605";
 }
 .icon-servicos_extrusao:before {
-	content: "\e606";
+    content: "\e606";
 }
 .icon-search:before {
-	content: "\e607";
+    content: "\e607";
 }
 .icon-produtos_vidro:before {
-	content: "\e608";
+    content: "\e608";
 }
 .icon-produtos_extrusao:before {
-	content: "\e609";
+    content: "\e609";
 }
 .icon-produtos_caixilharia:before {
-	content: "\e60a";
+    content: "\e60a";
 }
 .icon-obras:before {
-	content: "\e60b";
+    content: "\e60b";
 }
 .icon-menu:before {
-	content: "\e60c";
+    content: "\e60c";
 }
 .icon-marcacao:before {
-	content: "\e60d";
+    content: "\e60d";
 }
 .icon-local:before {
-	content: "\e60e";
+    content: "\e60e";
 }
 .icon-lacagem:before {
-	content: "\e60f";
+    content: "\e60f";
 }
 .icon-imitacao:before {
-	content: "\e610";
+    content: "\e610";
 }
 .icon-idioma:before {
-	content: "\e611";
+    content: "\e611";
 }
 .icon-extrusao:before {
-	content: "\e612";
+    content: "\e612";
 }
 .icon-call_black:before {
-	content: "\e613";
+    content: "\e613";
 }
 .icon-call:before {
-	content: "\e614";
+    content: "\e614";
 }
 .icon-caixilharia:before {
-	content: "\e615";
+    content: "\e615";
 }
 .icon-back:before {
-	content: "\e616";
+    content: "\e616";
 }
 .icon-apoio:before {
-	content: "\e617";
+    content: "\e617";
 }
 .icon-anodizacao:before {
-	content: "\e618";
+    content: "\e618";
 }
 .icon-ajuda:before {
-	content: "\e619";
+    content: "\e619";
 }
