--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -95,6 +95,7 @@ footer {
     font-size: 14px;
 }
 footer b {font-weight: 700!important;font-size: 12px;}
+footer > .container { margin: 0 auto;}
 #group {font-weight: 900!important;font-size: 13px;}
 #date {text-align: right;font-weight: 700!important;font-size: 16px;}
 #text {vertical-align: top;}
@@ -315,10 +316,10 @@ hr.divider {
     section > .container > .row .col-md-8 {display: inline-block;width: 55%;vertical-align: top;}
     section > .container > .row .col-md-4 {display: inline-block;width: 40%;vertical-align: top;}
 
-    footer > .content > .container > .row .col-md-9,
-    footer > .content > .container > .row .col-md-3 {display: inline-block;}
-    footer > .content > .container > .row > #contacts [class^="col-"],
-    footer > .content > .container > .row > #contacts [class*="col-"] {display: inline-block;}
+    footer > .container > .row .col-md-9,
+    footer > .container > .row .col-md-3 {display: inline-block;}
+    footer > .container > .row > #contacts [class^="col-"],
+    footer > .container > .row > #contacts [class*="col-"] {display: inline-block;}
     footer .col-md-9 {width: 45%;}
 
     
@@ -344,11 +345,11 @@ hr.divider {
 
     section > .container > .row .col-md-8, section > .container > .row .col-md-4 {display: block; width: 100%}
 
-    footer > .content > .container > .row .col-md-9 {width: 100%;text-align: center;}
-    footer > .content > .container > .row .col-md-3 {display: none;}
-    footer > .content > .container > .row > #contacts [class^="col-"],
-    footer > .content > .container > .row > #contacts [class*="col-"] {display: block;text-align: center;}
-    footer > .content > .container > .row > #contacts .col-md-1 {display: none}
+    footer > .container > .row .col-md-9 {width: 100%;text-align: center;}
+    footer > .container > .row .col-md-3 {display: none;}
+    footer > .container > .row > #contacts [class^="col-"],
+    footer > .container > .row > #contacts [class*="col-"] {display: block;text-align: center;}
+    footer > .container > .row > #contacts .col-md-1 {display: none}
 
     .candidaturas .form-group, .contactos .form-group {height: 50px;}
     .candidaturas form .row, .contactos form .row {margin: 100px 0 25px}
@@ -363,8 +364,15 @@ hr.divider {
 @media (max-width: 450px) {
     header {height: 160px;}
     header .logotipo, header .logotipo h1 {width: 150px;}
-    .font {font-size: 220%;margin: 0 2px}
-    .pages-img a {margin: 0}
+
+    header .row .pages-img {top: 45px;}
+    .pages-img a {margin: 0;width: 40px;height: 40px;padding: 5px 0;}
+    .font {font-size: 185%}
+
     header .form {width: 100%;display: block;top: 100px;left: 0!important;}
-    header .form #search {width: 83%;display: inline-block;}
+    head .form {position: relative}
+    header .form #search {width: 100%;display: inline-block;}
+    header .form #searchButton {position: absolute;right: 0;top: 3px;width: 50px;}
+
+    header #signIn {top: 42px;}
 }
